<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/go_down_item"
        android:showAsAction="always|withText"
        android:title="@string/go_down_action"
        android:visible="false"
        tools:targetApi="honeycomb" />
    <item
        android:id="@+id/statistics_item"
        android:title="@string/statistics_item" />
    <item
        android:id="@+id/settings_item"
        android:title="@string/settings_title" />
    <item
        android:id="@+id/connection_manager_item"
        android:title="@string/connection_manager_title" />
    <item
        android:id="@+id/about_application_item"
        android:title="@string/about_application_str" />
    <item
        android:id="@+id/disconnect_item"
        android:title="@string/disconnect_item" />
</menu>