<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/interface_category">

    </PreferenceCategory>
    <Preference
        android:key="interface_language"
        android:layout="@layout/pref_widget"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/interface_language_item" />
    <Preference
        android:key="interface_theme"
        android:layout="@layout/pref_widget"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/interface_theme_item" />
    <PreferenceCategory android:title="@string/thread_category">

    </PreferenceCategory>
    <Preference
        android:key="font_size"
        android:layout="@layout/pref_widget"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/font_size_item" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="save_msg_history"
        android:title="@string/save_msg_history_item" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="show_msg_timestamps"
        android:title="@string/show_messages_timestamps_item" />
</PreferenceScreen>