<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_ll">

    <LinearLayout
        android:id="@+id/app_title_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/title_v11_transparent">

        <ImageView
            android:id="@+id/app_icon_view"
            android:layout_width="26dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/full_application_icon" />

        <TextView
            android:id="@+id/activity_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/about_application_str"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/full_application_icon" />

            <TextView
                android:id="@+id/app_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/version_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/version_str"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LEGACY"
                    android:id="@+id/app_flag_text"
                    android:layout_marginLeft="6dp"
                    android:layout_gravity="right" />
            </LinearLayout>

            <TextView
                android:id="@+id/license_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/license_info" />

            <TextView
                android:id="@+id/copyright_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/copyright_str" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/repo_button"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:text="@string/repo_button"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/website_button"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:text="@string/website_button"
                    android:textSize="16sp"
                    android:layout_marginLeft="4dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>