<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/orange"
            android:textSize="18sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/server_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_textarea"
            android:ems="10"
            android:hint="@string/server"
            android:inputType="textPersonName"
            android:paddingLeft="6dp"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/port_numb"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:background="@drawable/dialog_textarea"
            android:ems="10"
            android:hint="@string/port"
            android:inputType="number"
            android:maxLength="5"
            android:paddingLeft="6dp"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/encoding_spinner"
            style="@style/IRCClient.Spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/dialog_spinner"
            android:entries="@array/encoding_array" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/force_ssl_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:button="@drawable/checkbox"
            android:clickable="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/only_ssl"
            android:textSize="14sp"
            tools:targetApi="jelly_bean" />

        <CheckBox
            android:id="@+id/hide_ip_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:button="@drawable/checkbox"
            android:clickable="true"
            android:text="@string/hide_ip_label" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dialog_divider" />


</LinearLayout>