<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/orange"
            android:textSize="18sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/font_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:text="@string/font_size_label" />

        <TextView
            android:id="@+id/value_label"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textStyle="bold" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/font_size_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/preview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="6dp"
        android:text="@string/preview_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:longClickable="false"
        android:orientation="vertical">

        <EditText
            android:id="@+id/preview_text"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/gray"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="6dp"
            android:text="@string/sample_preview_text"
            android:textColor="@color/white"
            android:typeface="monospace" />
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dialog_divider" />

</LinearLayout>